# neurosync

./: .dockerignore  .gitignore  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: architecture.md  data-flow.md  mcp-tools.md  protocol-full.md  setup.md  skill-setup.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
neurosync/: __init__.py  __main__.py  analogy.py  api_server.py  calibration.py  causal.py  cli.py  config.py  consolidation.py  db.py  episodic.py  failure.py  forgetting.py  git_observer.py  graph.py  hierarchy.py  hooks.py  lensing.py  logging.py  mcp_server.py  models.py  pg_db.py  preemption.py  protocol.py  quality.py  replay.py  retrieval.py  sdk.py  semantic.py  signals.py  starter_pack_loader.py  surprises.py  topology.py  user_model.py  vectorstore.py  working.py
tests/: conftest.py  test_analogy.py  test_api_server.py  test_calibration.py  test_causal.py  test_cli.py  test_config.py  test_consolidation.py  test_db.py  test_domains.py  test_episodic.py  test_failure.py  test_forgetting.py  test_git_observer.py  test_graph.py  test_hardening.py  test_hierarchy.py  test_hooks.py  test_intelligence.py  test_lensing.py  test_logging.py  test_mcp_server.py  test_pg_integration.py  test_preemption.py  test_production_readiness.py  test_protocol.py  test_quality.py  test_replay.py  test_retrieval.py  test_sdk.py  test_selflearn.py  test_semantic.py  test_signals.py  test_starter_packs.py  test_surprises.py  (+4 more)
(+57 files in other folders)
